fixed z-index issue

--- a/assets/css/main_carousel.css
+++ b/assets/css/main_carousel.css
@@ -54,7 +54,8 @@ header nav a{
     position: relative;
     height: 90vh;
     overflow: hidden;
-    margin-top: -70px;
+    margin-top: 1px;
+    
 }
 .carousel .list{
     position: absolute;
@@ -63,6 +64,8 @@ header nav a{
     height: 90%;
     left: 50%;
     transform: translateX(-50%);
+    z-index: -1;
+    
 }
 .carousel .list .item{
     position: absolute;
@@ -71,6 +74,7 @@ header nav a{
     height: 100%;
     font-size: 15px;
     transition: left 0.5s, opacity 0.5s, width 0.5s;
+    
 }
 .carousel .list .item:nth-child(n + 6){
     opacity: 0;
@@ -371,7 +375,9 @@ header nav a{
     /* ipad, tablets */
     .carousel .list .item{
         width: 90%;
+
     }
+
     .carousel.showDetail .list .item:nth-child(2) .detail .specifications{
         overflow: auto;
     }
@@ -384,10 +390,13 @@ header nav a{
     /* mobile */
     .carousel{
         height: 600px;
+
     }
     .carousel .list .item{
         width: 100%;
         font-size: 10px;
+        
+        
     }
     
     .carousel .list{
